# aidrivenshop

./: .env.template  README.md  docker-compose.yaml
app/: .env.template  Dockerfile  alembic.ini  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 2025_08_31_1543-46cc28daecdc_initial_migration.py  2025_08_31_1646-a655ff20f45e_image_added.py  2025_08_31_1725-8a3018c9b481_add_created_at_and_updated_at_to_.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/category/: endpoints.py
app/core/: __init__.py  config.py
app/core/model/: __init__.py  attributes.py  base.py  categories.py  db_helper.py  images.py  product_attributes.py  products.py
app/core/schemas/: category.py
app/crud/: base.py  category.py
app/service/: category.py
app/utils/: minio_utils.py
front/: .prettierignore  .prettierrc  index.html  package-lock.json  package.json
front/src/app/: App.vue
front/src/app/styles/: style.css
